Closes issue #125 (Text wrapping issues)

--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -450,7 +450,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 	border-bottom: 1px solid #eee;
 	background: none;
 	font-size: 34px;
-	font-size: 2.125rem;
+	font-size: 1.75rem;
 	padding: 0;
 	font-family: 'source_sans_proextralight';
 	font-weight: 100;
